# hermes-agent-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  config.anthropic.example.yaml  config.example.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
docs/assets/: style.css
examples/: simple_run.rs
skills/japanese_politeness/: skill.md
src/: agent.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  skill.rs
src/llm/: anthropic.rs  mock.rs  mod.rs  openai.rs
src/memory/: in_memory.rs  json_file.rs  mod.rs
src/tool/: mod.rs
src/tool/builtins/: bash.rs  echo.rs  grep.rs  list_dir.rs  memory_tool.rs  mod.rs  read_file.rs  write_file.rs
tests/: agent_loop.rs  anthropic_client.rs  memory.rs  openai_client.rs  skills.rs  tool_registry.rs
