[package]
name = "hermes-agent-rs"
version = "0.2.0"
edition = "2021"
description = "Minimal Rust port of Nous Research's Hermes Agent (CLI-only, OpenAI-compatible)."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsasaki0109/hermes-agent-rs"
homepage = "https://github.com/rsasaki0109/hermes-agent-rs"
keywords = ["llm", "agent", "cli", "openai", "anthropic"]
categories = ["command-line-utilities", "asynchronous"]
exclude = [".github/", "docs/", "assets/"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "fs", "process"] }
walkdir = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "18"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
